Attempt to fix the EC2 lag